--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InfraFront Dashboard</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>L Infra Login</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
   </head>
-  <body class="bg-gray-100 text-gray-800">
+  <body class="bg-[#0F111A] text-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
