--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Infra Login</title>
+    <title>Infras Login</title>
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
   </head>
   <body class="bg-[#0F111A] text-gray-100">
