--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>L Infra</title>
+    <title>Infra</title>
   </head>
   <body class="bg-[#0F111A]">
     <div id="root"></div>
