--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Infras Login</title>
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+    <title>Infras</title>
   </head>
-  <body class="bg-[#0F111A] text-gray-100">
+  <body class="bg-[#0F111A]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
